# neural-speed

./: .gitignore  CMakeLists.txt  tmp_cb.py
.github/: pull_request_template.md
.github/workflows/: clang-format-check.yml  clang-format.sh
bestla/bestla/: bestla_epilogue.h  bestla_parallel.h  kernel_wrapper.h
examples/: CMakeLists.txt
examples/00_fmha/: CMakeLists.txt  fmha.cpp  fmha_forward.hpp  fmha_forward_causal_strided.hpp  fmha_policy_causal.h  fmha_utils.h
examples/05_batch_gemm/: batch_gemm.hpp
examples/06_gemm_softmax/: gemm_softmax.cpp
examples/07_multi_layer_perceptron/: multi_layer_perceptron.hpp
examples/08_scaled_dot_product_attention/: CMakeLists.txt  scaled_dot_product_attention.cpp  scaled_dot_product_attention.hpp  scaled_dot_product_attention_kern.cpp  scaled_dot_product_attention_main.cpp
examples/09_gate_recurrent_unit/: kernel_func.hpp
include/common/core/: arch_config.hpp  barrier.hpp  base_types.hpp  bit_mask_manipulation.hpp  common.hpp  common_types.hpp  debug.hpp  explicit_conv.hpp  math_general.hpp  math_mma.hpp  memory.hpp  raw_send.hpp
include/common/utils/: dict.hpp  fastmath.hpp  limitation.hpp  memory_descriptor.hpp  misc.hpp  rand.hpp  raw_send_load_store.hpp  raw_send_nbarrier.hpp  tensor_descriptor.hpp  work_group.hpp
include/experimental/common/: base_types.hpp
include/experimental/group/: dropout_mask_gen.hpp
include/experimental/group/fused_op/: layer_norm_fused_op_api.hpp  layer_norm_fused_op_bwd_xe.hpp  layer_norm_fused_op_fwd_xe.hpp  row_reduction_fused_op_api.hpp  row_reduction_fused_op_xe.hpp
include/experimental/group/gemm/: compute_policy.hpp
include/experimental/group/reduction/: reduction_api.hpp  row_reduce_store_xe.hpp
include/experimental/kernel/data_transformer/: api.hpp  config.hpp  data_transformer_xe.hpp
include/group/: cooperative_reduction.hpp  global_reduction.hpp  tile_shape.hpp
include/group/epilogue/: api.hpp  epilogue_policy.hpp
include/group/gemm/: api.hpp  common.hpp  compute_policy.hpp
include/group/reduction/: reduction_api.hpp  reduction_xe.hpp
include/group/softmax/: softmax_policy.hpp
include/kernel/gemm/: api.hpp  default_gemm.hpp  dispatch_policy.hpp  gemm_preset.hpp
include/subgroup/: cooperative_load_helper.hpp
include/subgroup/tile/: api.hpp  chained_tile_op.hpp  common.hpp
neural_speed/application/: main_pybind.cpp
neural_speed/core/: ne_layers.c  ne_layers.h
neural_speed/core/layers/: bestla_defs.h  mha_dense.cpp
neural_speed/models/gptj/: gptj.cpp
neural_speed/models/model_utils/: model_types.h  model_utils.cpp  model_utils.h
scripts/: python_api_example_for_model_server.py
tests/integration/: CMakeLists.txt
tests/integration/fmha/: CMakeLists.txt  fmha.cpp  fmha_forward.hpp  fmha_forward_policy.h  fmha_forward_v2.hpp  fmha_kernels.cpp  fmha_kernels.hpp
tests/integration/ifmha/: CMakeLists.txt  ifmha.cpp  ifmha_forward.hpp  ifmha_forward_policy.h  ifmha_utils.h
tests/integration/limitation/: main.cpp
tests/integration/sg_dropout_op/: kernel_func.hpp
tests/integration/softmax/: softmax_fwd_kernel.hpp
tests/unit/epilogue_tile_op/: kernel_func.hpp
tests/unit/global_load_store/: kernel_func.hpp
tests/unit/local_load_store/: kernel_func.hpp
tests/unit/tile_load_store/: kernel_func.hpp  main.cpp
tests/utils/: buff_compare.hpp  execution.hpp
tools/: clang-format.py
tools/clang-format/: clang-format.hook
(+61 files in other folders)
